--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
     "@fortawesome/fontawesome-free": "^6.0.0",
+    "@types/googlemaps": "^3.43.3",
     "bootstrap": "^5.1.3",
     "font-awesome": "^4.7.0",
     "primeicons": "^5.0.0",
